updated paths to project pages

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
             <div>
               <div class="project-container">
-                <a href="/projects/recap/recap.html">
+                <a href="projects/recap/recap.html">
                   <div class="project-header">
                     <p class="ff-body fs-medium fw-semibold text-primary-400 hover-underline-animation">Time Capsule Mobile App</p>
                     <p class="ff-body fs-medium fw-semibold text-primary-400">@UCI</p>
@@ -104,7 +104,7 @@
               </div>
 
               <div class="project-container">
-                <a href="/projects/mtplate/mtplate.html">
+                <a href="projects/mtplate/mtplate.html">
                   <div class="project-header">
                     <p class="ff-body fs-medium fw-semibold text-primary-400 hover-underline-animation">Food Waste Tracker</p>
                     <p class="ff-body fs-medium fw-semibold text-primary-400">@UCI</p>
