--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <a class="logo" href="index.html"><img src="assets/logo.png" alt=""></a>
         <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
           <img class="icon-hamburger" src="assets/hamburger-menu-icon.svg" alt="" aria-hidden="true">
-          <img class="icon-close" src="assets/close-menu-icon.svg" alt="" aria-hidden="true">
           <span class="visually-hidden">Menu</span>
         </button>
         <nav class="primary-navigation" id="primary-navigation">
@@ -124,6 +123,6 @@
         </div>
       </section>
     </main>
-    <script type="module" src="/main.js"></script>
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
