--- a/projects/mtplate/mtplate.html
+++ b/projects/mtplate/mtplate.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="projects/style.css">
+    <link rel="stylesheet" type="text/css" href="/projects/style.css">
   </head>
   <body>
     <header class="primary-header">
@@ -163,6 +163,6 @@
       </section>
 
     </main>
-    <script type="module" src="/main.js"></script>
+    <script type="text/javascript" src="/main.js"></script>
   </body>
 </html>
