--- a/projects/mtplate/mtplate.html
+++ b/projects/mtplate/mtplate.html
@@ -13,14 +13,14 @@
   <body>
     <header class="primary-header">
       <div class="nav-wrapper">
-        <a class="logo" href="/index.html"><img src="/../assets/logo.png" alt=""></a>
+        <a class="logo" href="/personal-portfolio/index.html"><img src="/../assets/logo.png" alt=""></a>
         <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
           <img class="icon-hamburger" src="/../assets/hamburger-menu-icon.svg" alt="" aria-hidden="true">
           <span class="visually-hidden">Menu</span>
         </button>
         <nav class="primary-navigation" id="primary-navigation">
           <ul role="list" class="nav-list text-primary-400">
-            <li><a href="/index.html#projects" class="ff-body fs-xsmall">Work</a></li>
+            <li><a href="/personal-portfolio/index.html#projects" class="ff-body fs-xsmall">Work</a></li>
             <li><a href="https://tinyurl.com/mrx4cmcp" target="_blank" class="ff-body fs-xsmall">Resume</a></li>
             <li><a href="https://github.com/amiettle" target="_blank" class="ff-body fs-xsmall">Github</a></li>
             <li><a href="mailto:amiettle@gmail.com" target="_blank" class="ff-body fs-xsmall">Contact</a></li>
