updated paths to include repo name

--- a/projects/recap/recap.html
+++ b/projects/recap/recap.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="assets/website-icon.png" />
+    <link rel="icon" href="/personal-portfolio/assets/website-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ReCap Mobile App</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,9 +13,9 @@
   <body>
     <header class="primary-header">
       <div class="nav-wrapper">
-        <a class="logo" href="/personal-portfolio/index.html"><img src="/../assets/logo.png" alt=""></a>
+        <a class="logo" href="/personal-portfolio/index.html"><img src="/personal-portfolio/assets/logo.png" alt=""></a>
         <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
-          <img class="icon-hamburger" src="/../assets/hamburger-menu-icon.svg" alt="" aria-hidden="true">
+          <img class="icon-hamburger" src="/personal-portfolio/assets/hamburger-menu-icon.svg" alt="" aria-hidden="true">
           <span class="visually-hidden">Menu</span>
         </button>
         <nav class="primary-navigation" id="primary-navigation">
@@ -204,5 +204,5 @@
         </div>
       </section>
     </main>
-    <script type="text/javascript" src="/main.js"></script>
+    <script type="text/javascript" src="/personal-portfolio/main.js"></script>
   </body>
