replaced svg files with png images

--- a/projects/recap/recap.html
+++ b/projects/recap/recap.html
@@ -105,7 +105,7 @@
                 or expanded upon. After we all received feedback on our designs, we were able to finalize decisions about 
                 the mapping of the functionalities and the architecture of the app.
               </p>
-              <img src="assets/sketches.svg" style="align-self: center; margin: 1rem 1rem 1rem;" alt="">
+              <img src="assets/sketches.png" style="align-self: center; margin: 1rem 1rem 1rem;" alt="">
             </div>
           </div>
         </div>
@@ -120,10 +120,10 @@
           </p>
           <div class="even-columns-no-gap">
             <div>
-              <img src="assets/lofi-wireframes-1.svg" alt="">
+              <img src="assets/lofi-wireframes-1.png" alt="">
             </div>
             <div>
-              <img src="assets/lofi-wireframes-2.svg" alt="">
+              <img src="assets/lofi-wireframes-2.png" alt="">
             </div>
           </div>
           <p class="ff-body fw-regular fs-small padding-block-300">From there, we discussed how to improve the layout 
@@ -134,18 +134,18 @@
           </p>
           <div class="even-columns-no-gap">
             <div>
-              <img src="assets/hifi-mockups-1.svg" alt="">
+              <img src="assets/hifi-mockups-1.png" alt="">
             </div>
             <div>
-              <img src="assets/hifi-mockups-2.svg" alt="">
+              <img src="assets/hifi-mockups-2.png" alt="">
             </div>
           </div>
           <div class="even-columns-no-gap">
             <div>
-              <img src="assets/hifi-mockups-3.svg" alt="">
+              <img src="assets/hifi-mockups-3.png" alt="">
             </div>
             <div>
-              <img src="assets/hifi-mockups-4.svg" alt="">
+              <img src="assets/hifi-mockups-4.png" alt="">
             </div>
           </div>
           <p class="ff-body fw-regular fs-small padding-block-300">The login and signup pages were designed to embody the 
@@ -156,10 +156,10 @@
           </p>
           <div class="even-columns-no-gap">
             <div>
-              <img src="assets/onboarding-mockups-1.svg" alt="">
+              <img src="assets/onboarding-mockups-1.png" alt="">
             </div>
             <div>
-              <img src="assets/onboarding-mockups-2.svg" alt="">
+              <img src="assets/onboarding-mockups-2.png" alt="">
             </div>
           </div>
         </div>
