added padding to images

--- a/projects/recap/recap.html
+++ b/projects/recap/recap.html
@@ -118,8 +118,8 @@
             use cases: 1) Browse time capsules, 2) Create new time capsule, 3) Add media to time capsule, 4) Give edit 
             permissions to others, 5) Lock time capsule.
           </p>
-          <div class="even-columns-no-gap">
-            <div>
+          <div class="even-columns padding-block-300">
+            <div class="padding-block-100">
               <img src="assets/lofi-wireframes-1.png" alt="">
             </div>
             <div>
@@ -132,19 +132,19 @@
             later realized that it would be more intuitive and generalizable to categorize the capsules according to their 
             state (in progress, locked, and unlocked).
           </p>
-          <div class="even-columns-no-gap">
-            <div>
+          <div class="even-columns padding-block-300">
+            <div class="padding-block-100">
               <img src="assets/hifi-mockups-1.png" alt="">
             </div>
-            <div>
+            <div class="padding-block-100">
               <img src="assets/hifi-mockups-2.png" alt="">
             </div>
           </div>
-          <div class="even-columns-no-gap">
-            <div>
+          <div class="even-columns padding-block-300">
+            <div class="padding-block-100">
               <img src="assets/hifi-mockups-3.png" alt="">
             </div>
-            <div>
+            <div class="padding-block-100">
               <img src="assets/hifi-mockups-4.png" alt="">
             </div>
           </div>
@@ -154,11 +154,11 @@
             To add a thoughtful touch, I also designed an onboarding carousel that greets our new users with a brief overview 
             of the app and fun illustrations.
           </p>
-          <div class="even-columns-no-gap">
-            <div>
+          <div class="even-columns padding-block-300">
+            <div class="padding-block-100">
               <img src="assets/onboarding-mockups-1.png" alt="">
             </div>
-            <div>
+            <div class="padding-block-100">
               <img src="assets/onboarding-mockups-2.png" alt="">
             </div>
           </div>
