removed baseurl from file paths

--- a/projects/recap/recap.html
+++ b/projects/recap/recap.html
@@ -2,25 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/personal-portfolio/assets/website-icon.png" />
+    <link rel="icon" href="/assets/website-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ReCap Mobile App</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/personal-portfolio/projects/style.css">
+    <link rel="stylesheet" type="text/css" href="/projects/style.css">
   </head>
   <body>
     <header class="primary-header">
       <div class="nav-wrapper">
-        <a class="logo" href="/personal-portfolio/index.html"><img src="/personal-portfolio/assets/logo.png" alt=""></a>
+        <a class="logo" href="/index.html"><img src="/assets/logo.png" alt=""></a>
         <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
-          <img class="icon-hamburger" src="/personal-portfolio/assets/hamburger-menu-icon.svg" alt="" aria-hidden="true">
+          <img class="icon-hamburger" src="/assets/hamburger-menu-icon.svg" alt="" aria-hidden="true">
           <span class="visually-hidden">Menu</span>
         </button>
         <nav class="primary-navigation" id="primary-navigation">
           <ul role="list" class="nav-list text-primary-400">
-            <li><a href="/personal-portfolio/index.html#projects" class="ff-body fs-xsmall">Work</a></li>
+            <li><a href="/index.html#projects" class="ff-body fs-xsmall">Work</a></li>
             <li><a href="https://tinyurl.com/mrx4cmcp" target="_blank" class="ff-body fs-xsmall">Resume</a></li>
             <li><a href="https://github.com/amiettle" target="_blank" class="ff-body fs-xsmall">Github</a></li>
             <li><a href="mailto:amiettle@gmail.com" target="_blank" class="ff-body fs-xsmall">Contact</a></li>
@@ -204,5 +204,5 @@
         </div>
       </section>
     </main>
-    <script type="text/javascript" src="/personal-portfolio/main.js"></script>
+    <script type="text/javascript" src="/main.js"></script>
   </body>
