created ootify project page and updated homepage

--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
             <p class="ff-body fs-primary-heading fw-regular text-primary-400">
               Front end developer passionate about UX design. 
               Currently studying informatics at <u>UC Irvine</u>, 
-              specializing in human and computer interaction, 
-              and doing design things at <u>OOTify</u>. Based in 
-              Orange County, California&#129767;</p>
+              specializing in human and computer interaction. 
+              Based in Orange County, California&#129767;</p>
           </div>
         </div>
       </section>
@@ -50,9 +49,9 @@
               <p class="ff-heading fs-primary-heading fw-bold padding-bottom-700 text-primary-400">Featured Work</p>
 
               <div class="project-container">
-                <a>
+                <a href="projects/ootify/ootify.html">
                   <div class="project-header">
-                    <p class="ff-body fs-medium fw-semibold text-primary-400 hover-underline-animation">OOTify Web App - Coming Soon</p>
+                    <p class="ff-body fs-medium fw-semibold text-primary-400 hover-underline-animation">OOTify Web App</p>
                     <p class="ff-body fs-medium fw-semibold text-primary-400">@OOTify</p>
                   </div>
                   <p class="ff-heading fs-xsmall fw-regular text-accent-400">Fall 2022 | Web Development</p>
@@ -60,7 +59,7 @@
                   <div class="thumbnail-wrapper">
                     <img class="project-thumbnail" src="assets/ootifythumbnail.png" alt="">
                     <div class="middle">
-                      <div class="text ff-body fs-small fw-semibold text-primary-400">In Progress</div>
+                      <div class="text ff-body fs-small fw-semibold text-primary-400">View Project</div>
                     </div>
                   </div>
                 </a>
