fixed spacing for hero section

--- a/projects/ootify/ootify.html
+++ b/projects/ootify/ootify.html
@@ -32,7 +32,7 @@
       <section class="hero padding-block-300">
         <div class="container">
           <div class="even-columns">
-            <div>
+            <div class="padding-bottom-700">
               <p class="ff-body fw-bold fs-small padding-block-100" style="text-transform: uppercase;">Web Development</p>
               <p class="ff-heading fw-bold fs-primary-heading padding-bottom-700">OOTify Web Application</p>
               <p class="ff-body fw-bold fs-small" style="text-transform: uppercase;">Summary</p>
