--- a/projects/ootify/ootify.html
+++ b/projects/ootify/ootify.html
@@ -21,7 +21,7 @@
         <nav class="primary-navigation" id="primary-navigation">
           <ul role="list" class="nav-list text-primary-400">
             <li><a href="/index.html#projects" class="ff-body fs-xsmall">Work</a></li>
-            <li><a href="https://tinyurl.com/mrx4cmcp" target="_blank" class="ff-body fs-xsmall">Resume</a></li>
+            <li><a href="https://tinyurl.com/4v6hhpub" target="_blank" class="ff-body fs-xsmall">Resume</a></li>
             <li><a href="https://github.com/amiettle" target="_blank" class="ff-body fs-xsmall">Github</a></li>
             <li><a href="mailto:amiettle@gmail.com" target="_blank" class="ff-body fs-xsmall">Contact</a></li>
           </ul>
